Fix font size in home component on small screens

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -10,3 +10,13 @@
 .contentText p {
   font-size: 20px;
 }
+
+@media (max-width: 640px) {
+  .contentText h2 {
+    font-size: 24px;
+  }
+
+  .contentText p {
+    font-size: 14px;
+  }
+}
